--- a/deploy/index.html
+++ b/deploy/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="js/vendor/RequestAnimationFrame.js"></script>
     <script type="text/javascript" src="js/vendor/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="js/vendor/three.min.js"></script>
+    <script type="text/javascript" src="js/vendor/Stats.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
   </body>
